--- a/main.css
+++ b/main.css
@@ -1,6 +1,3 @@
-body{
-    font-family: Montserrat, sans-serif;
-}
 
 header {
     font-family: Raleway, sans-serif;
@@ -10,15 +7,34 @@ header {
     padding: 25px;
 }
 
+
+
 .col-3 {
- background-color: lightgray;
- border: 8px solid white;
+    /* background-color: blue; */
+    border: 4px solid white;
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 
-#audio-player{
+#audio-player {
     margin-top: 35px;
 }
 
 #search-form button {
-    margin-top: 5px; 
+    margin-top: 5px;
+}
+
+#artist-name {
+    font-family: Raleway, sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+}
+
+#track-name {
+    margin-top: 10px;
+    font-size: 10px;
+    color: lightgrey;
 }
