--- a/main.css
+++ b/main.css
@@ -1,17 +1,43 @@
+body {
+    background-color: #161418; 
+}
 
 header {
     font-family: Raleway, sans-serif;
-    background-color: burlywood;
-    text-align: center;
     font-size: 60px;
-    padding: 25px;
+    padding: 150px;
+    
 }
 
+hr {
+    border-top: 1px solid lightgray;
+}
 
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://images.unsplash.com/photo-1496361910809-f54291f339b1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0f7d8a4818c1d49e3003536d89e0b7e8&auto=format&fit=crop&w=1947&q=80");
+    /* Set a specific height */
+    height: -50px;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight: 700;
+}
 
 .col-3 {
-    /* background-color: blue; */
-    border: 4px solid white;
+    border: 4px solid #161418;
     text-align: center;
     padding-top: 25px;
     padding-bottom: 0;
@@ -19,8 +45,24 @@ header {
     padding-right: 0;
 }
 
+.subtitle{
+    margin: 0;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 0;
+}
+
+#search-input {
+    border: 1px solid black; 
+}
+
+#search-button {
+    background-color: black;
+    border: 1px solid black;
+}
+
 #audio-player {
-    margin-top: 35px;
+    margin-top: 100px;
 }
 
 #search-form button {
@@ -29,6 +71,7 @@ header {
 
 #artist-name {
     font-family: Raleway, sans-serif;
+    color: lightgray;
     font-size: 13px;
     font-weight: 700;
 }
